[package]
name = "tracetree"
version = "0.1.6-pre"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
description = "Trace the execution of an entire process tree."
repository = "https://github.com/luser/tracetree/"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["ptrace"]

[dependencies]
chrono = { version = "0.3", features = ["serde"] }
clap = "2.25.0"
env_logger = "0.3.5"
error-chain = "0.10.0"
indextree = "1.0.1"
libc = "0.2.21"
log = "0.3.6"
nix = "0.8.1"
serde = "1.0.8"
serde_json = "1.0.2"
spawn-ptrace = "0.1"
